# l9-cloud-challenge-2023

./: .gitignore  README.md  pyproject.toml
player_performance_tracker/: manage.py
player_performance_tracker/player_performance_tracker/: asgi.py  settings.py  urls.py  wsgi.py
player_performance_tracker/stats_api/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
player_performance_tracker/stats_api/data/: L9HomeworkChallengePlayersInput.csv
player_performance_tracker/stats_api/migrations/: 0001_initial.py
