[tool.poetry]
name = "player_performance_tracker"
version = "0.1.0"
description = ""
authors = ["Srdjan Petrovic <s.petrovic852@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
